src/main/java/com/example/demo/error/BadRequestException.java
package com.example.demo.error;

public class BadRequestException extends BusinessException {
    public BadRequestException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}